Fim do Módulo 2

--- a/Módulo 2/client/app/foto/foto.component.html
+++ b/Módulo 2/client/app/foto/foto.component.html
@@ -1,2 +1,2 @@
 <!--usando os colchetes eu consigo isolar os parâmetros e indicar qual a variável do componente que deve informar o conteúdo-->
- <img class="img-responsive center-block" [src]="url" [alt]="titulo">
+ <img class="img-responsive center-block efeito" [src]="url" [alt]="titulo">
