--- a/Módulo 2/client/app/listagem/listagem.component.html
+++ b/Módulo 2/client/app/listagem/listagem.component.html
@@ -25,9 +25,14 @@
     <br>
     <div class="row">
         <!--*ngFor é uma espécie de for dentro do html do component-->
+        
         <painel *ngFor="let foto of fotos | filtroPorTitulo:textoProcurado.value" titulo="{{foto.titulo | uppercase}}" class="col-md-2">
             <!--Usando o PIPE '|' podemos passar instruções ou até mesmo funções para lidar com os dados exibidos.-->
+            <a [routerLink] = "['/cadastro',foto._id]">            
             <foto url="{{foto.url}}" titulo="{{foto.titulo}}"></foto>
+            </a>
+            <br>
+            <button class="btn btn-danger btn-block" (click)="remove(foto)">Remover</button>
         </painel>
     </div>
 </div>
